testdata/baselines/reference/submodule/conformance/jsDeclarationsExportedClassAliases.errors.txt
utils/errors.js(7,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
utils/index.js(4,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== utils/index.js (1 errors) ====
    // issue arises here on compilation
    const errors = require("./errors");
    
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        errors
    };
==== utils/errors.js (1 errors) ====
    class FancyError extends Error {
        constructor(status) {
            super(`error with status ${status}`);
        }
    }
    
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        FancyError
    };
    